--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Let's Try CSS</title>
+
+  <!-- Style(s) -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+  <!-- Script(s) -->
+  <script type="application/javascript" src="js/scripts.js" defer></script>
 </head>
 <body>
-  
+  <h1>Let's Try CSS</h1>
 </body>
 </html>
