--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
 </head>
 <body>
   <h1>Let's Try CSS</h1>
+  <nav>
+    <h2>Website Navigation</h2>
+    <ul>
+      <li>
+        <a href="index.html">
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="box-model.html">
+          Box Model
+        </a>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
