Add box model styles; add link back to homepage.

--- a/box-model.html
+++ b/box-model.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   <h1>Box Model</h1>
+  <p>
+    <a href="index.html">Click here</a>
+    to return to the homepage.
+  </p>
   <div id="box-model" aria-role="presentation"></div>
 </body>
 </html>
