--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <h1>Let's Try CSS</h1>
   <nav>
-    <h2>Website Navigation</h2>
+    <h2 class="screen-reader-text">
+      Website Navigation
+    </h2>
     <ul>
       <li>
         <a href="index.html">
