Add placeholder content for font testing.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
       </li>
     </ul>
   </nav>
+  <h2>All About Our Website</h2>
+  <p>
+    At <strong>ipsum voluptatibus</strong> aut qui et at est consequatur. <em>In quod harum aut sunt et ipsam</em> et. Dolorum et ipsa distinctio. Et sapiente aut sint. Laboriosam nisi repudiandae officia qui est nisi.
+  </p>
+  <p>
+    <span class="black-font">Omnis est amet <strong>ducimus</strong></span> natus amet sed mollitia. Qui sint sit saepe autem odio voluptates voluptatem. <span class="light-font">Voluptate sunt temporibus consequatur</span> eos. Aut rem omnis fuga.
+  </p>
+  <p>
+    Sint sit laboriosam et voluptatem consequatur optio qui placeat. Impedit corporis inventore incidunt accusantium id eos et voluptatem. Eum earum corrupti autem est enim autem doloremque. Reprehenderit ad modi dolores corporis hic.
+  </p>
 </body>
 </html>
