Add image / float example.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Let's Try CSS</title>
 
+  <!-- Google Font(s) -->
+  <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet"> 
+
   <!-- Style(s) -->
   <link rel="stylesheet" type="text/css" href="css/main.css">
 
@@ -38,6 +41,10 @@
     <span class="black-font">Omnis est amet <strong>ducimus</strong></span> natus amet sed mollitia. Qui sint sit saepe autem odio voluptates voluptatem. <span class="light-font">Voluptate sunt temporibus consequatur</span> eos. Aut rem omnis fuga.
   </p>
   <p>
+    <img
+      src="img/tower-and-city-photograph.jpg"
+      alt="Photograph of a tower in the city."
+      width=300>
     Sint sit laboriosam et voluptatem consequatur optio qui placeat. Impedit corporis inventore incidunt accusantium id eos et voluptatem. Eum earum corrupti autem est enim autem doloremque. Reprehenderit ad modi dolores corporis hic.
   </p>
 </body>
