--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           Box Model
         </a>
       </li>
+      <li>
+        <a href="flex.html">
+          Flex / Media Query Example
+        </a>
+      </li>
     </ul>
   </nav>
   <h2>All About Our Website</h2>
