Mobile CSS completed.

--- a/flex.html
+++ b/flex.html
@@ -18,6 +18,7 @@
     <nav>Navigation</nav>
   </header>
   <main>
+    <section>Hero</section>
     <section>Service 1</section>
     <section>Service 2</section>
     <section>Service 3</section>
