Add HTML skeleton for the CSS grid example page.

--- a/grid.html
+++ b/grid.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" type="text/css" href="css/grid.css">
 </head>
 <body>
-  
+  <h1>Logo</h1>
+  <form id="search-form">Search</form>
+  <nav>Navigation</nav>
+  <section class="hero">Hero</section>
+  <section class="service-1">Service 1</section>
+  <section class="service-2">Service 2</section>
+  <section class="service-3">Service 3</section>
+  <article>Additional</article>
+  <form id="contact-form">Contact Us</form>
+  <footer>&copy; 2020; TECHCareers</footer>
 </body>
 </html>
